// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBox applies its default props 1`] = `
<form
  action=""
  className="form false"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
  role="search"
>
  <input
    autoCapitalize="off"
    autoComplete="off"
    autoCorrect="off"
    autoFocus={false}
    className="input"
    maxLength="512"
    onChange={[Function]}
    placeholder="Search here…"
    required={true}
    spellCheck="false"
    type="search"
    value=""
  />
  <button
    className="submit"
    style={
      Object {
        "display": "block",
      }
    }
    title="Submit your search query."
    type="submit"
  >
    <svg
      height="1em"
      role="img"
      width="1em"
    >
      <use
        xlinkHref="#sbx-icon-search-13"
      />
    </svg>
  </button>
  <button
    className="reset"
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    title="Clear the search query."
    type="reset"
  >
    <svg
      height="1em"
      role="img"
      width="1em"
    >
      <use
        xlinkHref="#sbx-icon-clear-3"
      />
    </svg>
  </button>
</form>
`;

exports[`SearchBox lets you customize its theme 1`] = `
<form
  action=""
  className="form false"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
  role="search"
>
  <input
    autoCapitalize="off"
    autoComplete="off"
    autoCorrect="off"
    autoFocus={false}
    className="input"
    maxLength="512"
    onChange={[Function]}
    placeholder="Search here…"
    required={true}
    spellCheck="false"
    type="search"
    value=""
  />
  <button
    className="submit"
    style={
      Object {
        "display": "block",
      }
    }
    title="Submit your search query."
    type="submit"
  >
    <svg
      height="1em"
      role="img"
      width="1em"
    >
      <use
        xlinkHref="#sbx-icon-search-13"
      />
    </svg>
  </button>
  <button
    className="reset"
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    title="Clear the search query."
    type="reset"
  >
    <svg
      height="1em"
      role="img"
      width="1em"
    >
      <use
        xlinkHref="#sbx-icon-clear-3"
      />
    </svg>
  </button>
</form>
`;

exports[`SearchBox lets you customize its translations 1`] = `
<form
  action=""
  className="form false"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
  role="search"
>
  <input
    autoCapitalize="off"
    autoComplete="off"
    autoCorrect="off"
    autoFocus={false}
    className="input"
    maxLength="512"
    onChange={[Function]}
    placeholder="PLACEHOLDER"
    required={true}
    spellCheck="false"
    type="search"
    value=""
  />
  <button
    className="submit"
    style={
      Object {
        "display": "block",
      }
    }
    title="Submit your search query."
    type="submit"
  >
    <svg
      height="1em"
      role="img"
      width="1em"
    >
      <use
        xlinkHref="#sbx-icon-search-13"
      />
    </svg>
  </button>
  <button
    className="reset"
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    title="RESET_TITLE"
    type="reset"
  >
    <svg
      height="1em"
      role="img"
      width="1em"
    >
      <use
        xlinkHref="#sbx-icon-clear-3"
      />
    </svg>
  </button>
</form>
`;

exports[`SearchBox lets you give custom components for reset and submit 1`] = `
<form
  action=""
  className="form false"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
  role="search"
>
  <input
    autoCapitalize="off"
    autoComplete="off"
    autoCorrect="off"
    autoFocus={false}
    className="input"
    maxLength="512"
    onChange={[Function]}
    placeholder="Search here…"
    required={true}
    spellCheck="false"
    type="search"
    value=""
  />
  <button
    className="submit"
    style={
      Object {
        "display": "block",
      }
    }
    title="Submit your search query."
    type="submit"
  >
    <span>
      🔍
    </span>
  </button>
  <button
    className="reset"
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    title="Clear the search query."
    type="reset"
  >
    <svg
      viewBox="200 198 108 122"
    >
      <path
        d="M200.8 220l45 46.7-20 47.4 31.7-34 50.4 39.3-34.3-52.6 30.2-68.3-49.7 51.7"
      />
    </svg>
  </button>
</form>
`;

exports[`SearchBox should render the loader if showLoadingIndicator is true 1`] = `
<form
  action=""
  className="form false"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
  role="search"
>
  <input
    autoCapitalize="off"
    autoComplete="off"
    autoCorrect="off"
    autoFocus={false}
    className="input"
    maxLength="512"
    onChange={[Function]}
    placeholder="Search here…"
    required={true}
    spellCheck="false"
    type="search"
    value=""
  />
  <div
    className="loadingIndicator"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <svg
      height="18"
      stroke="#BFC7D8"
      viewBox="0 0 38 38"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <g
          strokeWidth="2"
          transform="translate(1 1)"
        >
          <circle
            cx="18"
            cy="18"
            r="18"
            strokeOpacity=".5"
          />
          <path
            d="M36 18c0-9.94-8.06-18-18-18"
          >
            <animateTransform
              attributeName="transform"
              dur="1s"
              from="0 18 18"
              repeatCount="indefinite"
              to="360 18 18"
              type="rotate"
            />
          </path>
        </g>
      </g>
    </svg>
  </div>
  <button
    className="submit"
    style={
      Object {
        "display": "block",
      }
    }
    title="Submit your search query."
    type="submit"
  >
    <svg
      height="1em"
      role="img"
      width="1em"
    >
      <use
        xlinkHref="#sbx-icon-search-13"
      />
    </svg>
  </button>
  <button
    className="reset"
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    title="Clear the search query."
    type="reset"
  >
    <svg
      height="1em"
      role="img"
      width="1em"
    >
      <use
        xlinkHref="#sbx-icon-clear-3"
      />
    </svg>
  </button>
</form>
`;

exports[`SearchBox should render the loader if showLoadingIndicator is true 2`] = `
<form
  action=""
  className="form form--stalledSearch"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
  role="search"
>
  <input
    autoCapitalize="off"
    autoComplete="off"
    autoCorrect="off"
    autoFocus={false}
    className="input"
    maxLength="512"
    onChange={[Function]}
    placeholder="Search here…"
    required={true}
    spellCheck="false"
    type="search"
    value=""
  />
  <div
    className="loadingIndicator"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <svg
      height="18"
      stroke="#BFC7D8"
      viewBox="0 0 38 38"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <g
          strokeWidth="2"
          transform="translate(1 1)"
        >
          <circle
            cx="18"
            cy="18"
            r="18"
            strokeOpacity=".5"
          />
          <path
            d="M36 18c0-9.94-8.06-18-18-18"
          >
            <animateTransform
              attributeName="transform"
              dur="1s"
              from="0 18 18"
              repeatCount="indefinite"
              to="360 18 18"
              type="rotate"
            />
          </path>
        </g>
      </g>
    </svg>
  </div>
  <button
    className="submit"
    style={
      Object {
        "display": "none",
      }
    }
    title="Submit your search query."
    type="submit"
  >
    <svg
      height="1em"
      role="img"
      width="1em"
    >
      <use
        xlinkHref="#sbx-icon-search-13"
      />
    </svg>
  </button>
  <button
    className="reset"
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    title="Clear the search query."
    type="reset"
  >
    <svg
      height="1em"
      role="img"
      width="1em"
    >
      <use
        xlinkHref="#sbx-icon-clear-3"
      />
    </svg>
  </button>
</form>
`;

exports[`SearchBox transfers the autoFocus prop to the underlying input element 1`] = `
<form
  action=""
  className="form false"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
  role="search"
>
  <input
    autoCapitalize="off"
    autoComplete="off"
    autoCorrect="off"
    autoFocus={true}
    className="input"
    maxLength="512"
    onChange={[Function]}
    placeholder="Search here…"
    required={true}
    spellCheck="false"
    type="search"
    value=""
  />
  <button
    className="submit"
    style={
      Object {
        "display": "block",
      }
    }
    title="Submit your search query."
    type="submit"
  >
    <svg
      height="1em"
      role="img"
      width="1em"
    >
      <use
        xlinkHref="#sbx-icon-search-13"
      />
    </svg>
  </button>
  <button
    className="reset"
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    title="Clear the search query."
    type="reset"
  >
    <svg
      height="1em"
      role="img"
      width="1em"
    >
      <use
        xlinkHref="#sbx-icon-clear-3"
      />
    </svg>
  </button>
</form>
`;

exports[`SearchBox treats its query prop as its input value 1`] = `
<form
  action=""
  className="form false"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
  role="search"
>
  <input
    autoCapitalize="off"
    autoComplete="off"
    autoCorrect="off"
    autoFocus={false}
    className="input"
    maxLength="512"
    onChange={[Function]}
    placeholder="Search here…"
    required={true}
    spellCheck="false"
    type="search"
    value="QUERY1"
  />
  <button
    className="submit"
    style={
      Object {
        "display": "block",
      }
    }
    title="Submit your search query."
    type="submit"
  >
    <svg
      height="1em"
      role="img"
      width="1em"
    >
      <use
        xlinkHref="#sbx-icon-search-13"
      />
    </svg>
  </button>
  <button
    className="reset"
    onClick={[Function]}
    style={
      Object {
        "display": "block",
      }
    }
    title="Clear the search query."
    type="reset"
  >
    <svg
      height="1em"
      role="img"
      width="1em"
    >
      <use
        xlinkHref="#sbx-icon-clear-3"
      />
    </svg>
  </button>
</form>
`;

exports[`SearchBox treats its query prop as its input value 2`] = `
<form
  action=""
  className="form false"
  noValidate={true}
  onReset={[Function]}
  onSubmit={[Function]}
  role="search"
>
  <input
    autoCapitalize="off"
    autoComplete="off"
    autoCorrect="off"
    autoFocus={false}
    className="input"
    maxLength="512"
    onChange={[Function]}
    placeholder="Search here…"
    required={true}
    spellCheck="false"
    type="search"
    value="QUERY2"
  />
  <button
    className="submit"
    style={
      Object {
        "display": "block",
      }
    }
    title="Submit your search query."
    type="submit"
  >
    <svg
      height="1em"
      role="img"
      width="1em"
    >
      <use
        xlinkHref="#sbx-icon-search-13"
      />
    </svg>
  </button>
  <button
    className="reset"
    onClick={[Function]}
    style={
      Object {
        "display": "block",
      }
    }
    title="Clear the search query."
    type="reset"
  >
    <svg
      height="1em"
      role="img"
      width="1em"
    >
      <use
        xlinkHref="#sbx-icon-clear-3"
      />
    </svg>
  </button>
</form>
`;
